Resolved checkstyle and spotbugs errors